--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@types/dom-speech-recognition": "^0.0.4",
+    "D": "^1.0.0",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.323.0",
     "react": "^18.2.0",
