--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d build -r https://github.com/alinebeatrizw/NLW-EXPERT"
+    
   },
   "dependencies": {
     "-": "^0.0.1",
